# anchordetr_tensorrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  export_dynamic_shape_onnx.sh  export_static_shape_onnx.sh  inference_dynamic_shape_onnx.sh  inference_dynamic_shape_trt.sh  inference_static_shape_onnx.sh  requirements.txt  test.sh
data/: README.md
include/plugins/: AddVBiasTransposePlugin.h  LayerNormPlugin.h  Mask2PosPlugin.h
model/: README.md
onnx2trt/: .gitignore  build_anchor_detr.sh  export_AnchorDETR.py  modify_AnchorDETR.py
onnx2trt/AddQBiasTransposePlugin/: AddQBiasTransposePlugin.cu  AddQBiasTransposePlugin.h
onnx2trt/AnchorDETR/: engine.py  export_onnx.py  export_onnx.sh  export_onnx_dynamic_shape.sh  inference_onnx.py  inference_onnx.sh  inference_onnx_dynamic_shape.sh  inference_trt.py  inference_trt_dynamic_shape.sh  main.py  main.sh
onnx2trt/AnchorDETR/models/: anchor_detr.py
onnx2trt/LayerNormPlugin/: .gitignore  LayerNormPlugin.cu  Makefile
onnx2trt/Mask2PosPlugin/: Makefile  Mask2PosPlugin.cu  testMask2PosPluginOnnx.py
onnx2trt/MaskedSoftmaxPlugin/: Makefile  MaskedSoftmaxPlugin.cu  MaskedSoftmaxPlugin.h  testMaskedSoftmaxPluginOnnx.py
src/AnchorDETR/: .gitignore  engine.py  export_onnx.py  inference_trt.py  main.py
src/AnchorDETR/datasets/: coco.py  transforms.py
src/AnchorDETR/models/: anchor_detr.py  backbone.py  row_column_decoupled_attention.py  transformer.py
src/plugins/: CMakeLists.txt  Makefile.inc  testAddVBiasTransposePluginOnnx.py
src/plugins/AddQBiasTransposePlugin/: Makefile  testAddQBiasTransposePluginOnnx.py
src/plugins/AddVBiasTransposePlugin/: AddVBiasTransposePlugin.cu  Makefile
src/plugins/LayerNormPlugin/: testLayerNormPluginOnnx.py
src/python/: export_AnchorDETR.py  modify_AnchorDETR.py
